2011-03-29  Jeff Miller  <jeffm@apple.com>

Reviewed by Darin Adler.

        CoreIPC::decodeResourceError() leaks a CFDataRef
        https://bugs.webkit.org/show_bug.cgi?id=57366

        * Shared/win/WebCoreArgumentCodersWin.cpp:
        (CoreIPC::decodeResourceError): Don't leak the result of WebCore::copyCertificateToData(), since the ResourceError will retain it.


Canonical link: https://commits.webkit.org/72108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82306 268f45cc-cd09-0410-ab3c-d52691b4dbfc